--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "milon/barcode": "^12.0",
         "nesbot/carbon": "^3.8",
         "saloonphp/xml-wrangler": "^1.3",
         "spatie/array-to-xml": "^3.3",
